--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/newKit/newKit.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/newKit/newKit.component.html
@@ -1,57 +1,42 @@
+<mat-drawer-container class="container">
 
-<mat-drawer-container class= "container">
-
-	<mat-drawer mode="side" opened>
-    <button mat-stroked-button color= "primary" routerLink= "/tcmHome">Home</button>
+  <mat-drawer mode="side" opened>
+    <button mat-stroked-button color="primary" routerLink="/tcmHome">Home</button>
     <br>
-    <button mat-stroked-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
+    <button mat-stroked-button color="primary" routerLink="/reg-tc">Register Test Centre</button>
     <br>
-    <button mat-stroked-button color= "primary" routerLink= "/record-to">Record Tester</button>
+    <button mat-stroked-button color="primary" routerLink="/record-to">Record Tester</button>
     <br>
-    <button mat-stroked-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
+    <button mat-stroked-button color="primary" routerLink="/manage-stock">Manage Test-Kit Stock</button>
     <br>
-    <button mat-stroked-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
+    <button mat-stroked-button color="primary" routerLink="/generate-testReport">Generate Test Report</button>
   </mat-drawer>
-  
+
   <mat-drawer-content>
 
     <h2>Add New Test-Kit</h2>
     <br>
-          <form (submit) = "onAddUpdateKit(updateKitForm)" #updateKitForm="ngForm">
-            <br>
-            <mat-form-field class="kitName">
-              <input
-              matInput
-              type= "text"
-              name= "kitName"
-              ngModel
-              required
-              minlength= "3"
-              #kitName= "ngModel"
-              placeholder = "Enter new test-kit">
-            <mat-error *ngIf= "kitName.invalid">Please Enter Test-Kit Name</mat-error>
-            </mat-form-field>
-            <br>
+    <form (submit)="onAddUpdateKit(updateKitForm)" #updateKitForm="ngForm">
+      <br>
+      <mat-form-field class="kitName">
+        <input matInput type="text" name="kitName" ngModel required minlength="3" #kitName="ngModel"
+          placeholder="Enter new test-kit">
+        <mat-error *ngIf="kitName.invalid">Please Enter Test-Kit Name</mat-error>
+      </mat-form-field>
+      <br>
 
-          <mat-form-field class="numStock">
-            <input
-            matInput
-            type="number"
-            name= "numStock"
-            ngModel
-            required
-            minlength= "3"
-            #numStock= "ngModel"
-            placeholder= "Enter the number of stock">
-            <mat-error *ngIf= "numStock.invalid">Please Enter Number of Stock</mat-error>
-          </mat-form-field>
-          <br><br>
+      <mat-form-field class="numStock">
+        <input matInput type="number" name="numStock" ngModel required minlength="3" #numStock="ngModel"
+          placeholder="Enter the number of stock">
+        <mat-error *ngIf="numStock.invalid">Please Enter Number of Stock</mat-error>
+      </mat-form-field>
+      <br><br>
 
-        <button class= "btnSave" (click) = "onAddKit()" mat-raised-button color = "primary" type = "submit">Save</button>
-        <br><br>
-        <button class= "btnUpdate" mat-flat-button color="accent" routerLink="/updateKit">Update Stock List</button>
-        </form>
+      <button class="btnSave" (click)="onAddKit()" mat-raised-button color="primary" type="submit">Save</button>
+      <br><br>
+      <button class="btnUpdate" mat-flat-button color="accent" routerLink="/updateKit">Update Stock List</button>
+    </form>
 
   </mat-drawer-content>
-  
+
 </mat-drawer-container>
