--- a/Assignment2_BIT216/src/app/TestCentreManager/recordTestOfficer/record-to.component.css
+++ b/Assignment2_BIT216/src/app/TestCentreManager/recordTestOfficer/record-to.component.css
@@ -13,17 +13,17 @@
   text-align: center;
 }
 
-.officerFullName{
+.officerName{
   font-size: 20px;
   width: 50%;
 }
 
-.officerUsername{
+.officerPosition{
   font-size: 20px;
   width: 50%;
 }
 
-.officerPassword{
+.testCentreId{
   font-size: 20px;
   width: 50%;
 }
