--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/newKit/newKit.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/newKit/newKit.component.html
@@ -16,7 +16,7 @@
 
     <h2>Add New Test-Kit</h2>
     <br>
-    <form (submit)="onAddUpdateKit(updateKitForm)" #updateKitForm="ngForm">
+    <form (submit)="onAddStock(updateKitForm)" #updateKitForm="ngForm">
       <br>
       <mat-form-field class="kitName">
         <input matInput type="text" name="kitName" ngModel required minlength="3" #kitName="ngModel"
