--- a/Assignment2_BIT216/src/app/TestCentreManager/recordTestOfficer/record-to.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/recordTestOfficer/record-to.component.html
@@ -27,14 +27,14 @@
       <mat-form-field class="officerPosition">
         <input matInput type="text" name="officerPosition" ngModel required minlength="3" #officerPosition="ngModel"
           placeholder="Enter officer position">
-        <mat-error *ngIf="officerPosition.invalid">Please Enter Officer position.</mat-error>
+        <mat-error *ngIf="officerPosition.invalid">Please Enter Officer Position.</mat-error>
       </mat-form-field>
       <br>
 
       <mat-form-field class="testCentreId">
         <input matInput type="text" name="testCentreId" ngModel required minlength="3" #testCentreId="ngModel"
           placeholder="Enter test centre Id">
-        <mat-error *ngIf="testCentreId.invalid">Please Enter Test Centre Id.</mat-error>
+        <mat-error *ngIf="testCentreId.invalid">Please Enter Test Centre ID.</mat-error>
       </mat-form-field>
       <br><br>
 
