--- a/Assignment2_BIT216/src/app/TestCentreManager/registerTestCentre/reg-tc.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/registerTestCentre/reg-tc.component.html
@@ -20,7 +20,7 @@
 
       <mat-form-field class="centreName">
         <input matInput type="text" name="centreName" ngModel required minlength="3" #centreName="ngModel"
-          placeholder="Enter a test centre name">
+          placeholder="Enter test centre name">
         <mat-error *ngIf="centreName.invalid">Please Enter Test Centre Name</mat-error>
       </mat-form-field>
       <br>
