--- a/Assignment2_BIT216/src/app/tester/recordNewTest/recordNewTest.component.html
+++ b/Assignment2_BIT216/src/app/tester/recordNewTest/recordNewTest.component.html
@@ -30,7 +30,7 @@
         <textarea matInput type="text" name="patientSymptoms" ngModel required minlength="3" #patientSymptoms="ngModel"
           placeholder="Enter patient symptoms">
             </textarea>
-        <mat-error *ngIf="patientSymptoms.invalid">Please enter Patient's Symptoms</mat-error>
+        <mat-error *ngIf="patientSymptoms.invalid">Please enter Patient Symptoms</mat-error>
       </mat-form-field>
       <br>
       <mat-form-field class="testDate">
