--- a/Assignment2_BIT216/src/app/tester/updateTestResult/updateTestResult.component.html
+++ b/Assignment2_BIT216/src/app/tester/updateTestResult/updateTestResult.component.html
@@ -27,7 +27,7 @@
 
         <mat-action-row>
           <button mat-raised-button color="primary">Edit</button>
-          <button mat-raised-button color="warn">Delete</button>
+          <button mat-raised-button color="warn" (click) = "onDelete(test.id)">Delete</button>
         </mat-action-row>
 
       </mat-expansion-panel>
